--- a/函数.md
+++ b/函数.md
@@ -5,6 +5,8 @@
 
 当一个函数包含超过三个形参时，最好通过键值对的形式即对象来传入参数。
 
+如果传递给函数的参数是按值传递的，函数内部的操作不会影响外部；如果传递给函数的参数是按引用传递的，函数内部的操作就会影响到外部。
+
 ```
 (function(){
     // 模块代码，里面的参数处于局部作用域，不会污染全局变量。也叫做立即调用函数。
