--- a/类型、值和变量.md
+++ b/类型、值和变量.md
@@ -68,3 +68,15 @@ Number():可以用于任何数据类型转换成数值；
 parseInt()、parseFloat():专门用于把字符串转换成数值；parseInt()只解析整数，parseFloat()可以解析浮点数和整数。
 
 全局作用域可以不写var语句，局部作用域必须使用var，否则会作用在全局作用域上。
+
+```
+// for循环用var创建的变量即使在for循环执行结束后，也会存在于循环外部的执行环境中。
+for (var i = 0; i < 10; i++) {
+    // doSomething()
+}
+alert(i); // 10
+```
+
+垃圾收集方式：
+1. 标记清除：当变量进入环境时，将其标记为“进入环境”；当变量离开环境时，将其标记为“离开环境”。只有标记为“离开环境”的变量才能被回收内存。此方法是当前主流的垃圾回收算法。
+2. 引用计数：跟踪记录每个值被引用的次数。当声明一个变量并将一个引用类型值赋给该变量时，这个值的引用次数就是1。如果同一个值又被赋给另一个变量，则该值的引用次数加 1。相反，如果包含对这个值引用的变量又取得了另外一个值，则这个值的引用次数减1。当这个值的引用次数变成0时，就可以将其占用的内存空间回收回来。（存在相互引用占用内存不释放的风险，解决方法是手动重置为null来解除引用。）
