--- a/数组.md
+++ b/数组.md
@@ -23,9 +23,9 @@ sort比较函数：
 - 如果数组包含undefined元素，它们将会被排到数组的尾部
 - 如果第一个参数应该在前，则应返回一个小于0的数值，否则返回大于0的数值。相等则返回0。
 
-slice返回数组的一个片段，不会改变原数组。
+slice(起始位置, 结束位置)返回数组的一个片段，不会改变原数组。
 
-splice在数组中插入或删除元素，会改变原数组。参数1指定位置，参数2指定删除的元素个数，剩余参数指定了需要插入到数组的元素。
+splice(参数1, 参数2, 其他参数)在数组中插入或删除元素，会改变原数组。参数1指定位置，参数2指定删除的元素个数，剩余参数指定了需要插入到数组的元素。splice()方法始终都会返回一个包含从原数组中删除的项的数组，如果没有删除任何项，则返回一个空数组。
 
 Array.isArray()用来判断一个未知的对象是否为数组。
 
