--- a/数组.md
+++ b/数组.md
@@ -11,11 +11,21 @@
 
 给数组的length属性设置一个小于当前长度的非负整数n时，当前数组中索引大于或等于n的元素将从中删除。
 
-push()末尾添加；
-unshift()头部添加。
+```
+push()：末尾添加；
+unshift()：头部添加。
 
-pop()尾部删除；
-shift()头部删除。
+pop()：尾部删除；
+shift()：头部删除。
+
+every()：对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
+
+filter()：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
+
+forEach()：对数组中的每一项运行给定函数。这个方法没有返回值。  map()：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
+
+some()：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回 true。
+```
 
 在数组上不应该使用for/in循环遍历，因为它能够枚举继承的属性，结合hasOwnProperty可以过滤。
 
