--- a/函数.md
+++ b/函数.md
@@ -1,11 +1,13 @@
 # 函数
-当函数是对象的一个属性时，它叫做方法；当函数用于初始化一个新创建的对象时，它叫做构造函数。
+函数是对象，函数名是指针。
 
-函数可以嵌套在其他函数中定义，这样它们就可以访问它们被定义时所处的作用域的任何变量。这就是闭包。
+当函数是对象的一个属性时，它叫做方法；当函数用于初始化一个新创建的对象时，它叫做构造函数。
 
 当一个函数包含超过三个形参时，最好通过键值对的形式即对象来传入参数。
 
 如果传递给函数的参数是按值传递的，函数内部的操作不会影响外部；如果传递给函数的参数是按引用传递的，函数内部的操作就会影响到外部。
+
+JavaScript中的函数没有重载的概念，重复定义的函数名会覆盖之前的函数名，本质上是因为函数名是指针。
 
 ```
 (function(){
@@ -13,9 +15,15 @@
 }())
 ```
 
+函数声明与函数表达式的区别：
+- 函数声明具有声明提前的特性；
+- 函数表达式要等到代码执行到它所在的代码行，才会被执行。
+
 函数的执行依赖于变量作用域，这个作用域是在函数定义时决定的，而不是函数调用时决定的。
 
 所有函数都是可调用的，但是并非所有可调用的对象都是函数。
+
+函数可以嵌套在其他函数中定义，这样它们就可以访问它们被定义时所处的作用域的任何变量。这就是闭包。
 
 ```
 // 检查一个对象是否是真正的函数对象
@@ -66,3 +74,9 @@ function wordToUpperCase(arr) {
 }
 
 console.log(wordToUpperCase(['apple', 'pen', 'apple-pen']));
+```
+
+apply()和call()方法的用途在于在特定的作用域中调用函数，实际上等于设置函数体内this对象的值。
+
+- apply()接收两个参数：一个是在其中运行函数的作用域，另一个是参数数组，也可以是arguments对象。
+- call()接收的第一个参数同apply，其余的参数都直接传递给函数。
