--- a/正则表达式.md
+++ b/正则表达式.md
@@ -17,7 +17,7 @@
 + <=> {1, }
 * <=> {0, }
 
-ps:非贪婪的匹配，在待匹配的字符后跟随一个问号即可：??,+?,*?。会尽可能少地匹配。
+ps:非贪婪的匹配，在待匹配的字符后跟随一个问号即可，如??,+?,*?。会尽可能少地匹配。
 ```
 
 ```
@@ -58,3 +58,12 @@ pattern.exec(text)
 // 参数是字符串，如果包含正则表达式的一个匹配结果，则返回true
 pattern.test(text)
 ```
+
+RegExp实例属性：
+- global：是否设置了g标志
+- ignoreCase：是否设置了i标志
+- lastIndex：开始搜索下一个匹配项的字符位置，从0算起
+- multiline：是否设置了m标志
+- source：正则表达式的字符串表示
+
+正则表达式的valueOf()方法会返回正则表达式本身。
