--- a/类型、值和变量.md
+++ b/类型、值和变量.md
@@ -51,6 +51,12 @@ null === undefined // false。
 
 var s = "hello world";s.length; // 字符串不是对象，读取其属性时会通过new String()临时创建一个叫做包装对象的对象，随即这个对象会被销毁。（数字则调用Number()，布尔值调用Boolean）
 
+```
+// 把字符串传给Object构造函数，就会创建String的实例，数值对应Number，布尔值对应Boolean。
+var obj = new Object('some text')
+alert(obj instanceof String) // true
+```
+
 原始值是不可改变的，原始值的比较是值的比较。
 
 对象的比较并非值的比较，即使两个对象包含同样的属性和值，它们也是不相等的。各个索引元素完全相等的两个数组也不相等。（两个单独的对象用不相等，两个单独的数组用不相等。）
