--- a/类型、值和变量.md
+++ b/类型、值和变量.md
@@ -7,38 +7,6 @@ JavaScript的数据类型：
 
 两个特殊的原始值：null（空）和undefined（未定义）。它们是各自特殊类型的唯一成员。
 
-特殊的对象：数组和函数。
-
-如果函数用来new一个对象，它就是构造函数。
-
-作用域分为词法作用域和函数作用域。
-
-JavaScript不区分整数和浮点数。
-
-十六进制以“0x”或者“0X” 为前缀，八进制以数字0为前缀。
-
-NaN == NaN // false;
-
-NaN != NaN // true。
-
-isNaN()函数，如果参数是NaN或者非数字值，则返回true。
-
-isFinite()函数，在参数不是NaN、Infinity或-Infinity的时候返回true。
-
-getMonth()函数从0开始计算月份，getDay函数0代表周日，5代表周一。
-
-JavaScript中的字符串是固定不变的，任何方法都返回新字符串，原字符串不发生改变。
-
-假值列表：
-- undefined
-- null
-- 0
-- -0
-- NaN
-- ""
-
-其余所有值都会转换成true。
-
 typeof(null) // object，null值表示一个空指针对象
 
 typeof(undefined) //undefined
@@ -49,29 +17,17 @@ null === undefined // false。
 
 对未初始化的变量执行typeof操作会返回undefined，而对未声明的变量执行typeof操作也会返回undefined。
 
-var s = "hello world";s.length; // 字符串不是对象，读取其属性时会通过new String()临时创建一个叫做包装对象的对象，随即这个对象会被销毁。（数字则调用Number()，布尔值调用Boolean）
+特殊的对象：数组和函数。
 
-```
-// 把字符串传给Object构造函数，就会创建String的实例，数值对应Number，布尔值对应Boolean。
-var obj = new Object('some text')
-alert(obj instanceof String) // true
-```
+如果函数用来new一个对象，它就是构造函数。
+
+作用域分为词法作用域和函数作用域。
 
 原始值是不可改变的，原始值的比较是值的比较。
-
-对象的比较并非值的比较，即使两个对象包含同样的属性和值，它们也是不相等的。各个索引元素完全相等的两个数组也不相等。（两个单独的对象用不相等，两个单独的数组用不相等。）
-
-想到得到一个对象或数组的副本，必须显式复制对象的每个属性或数组的每个元素。
 
 +x <=> Number(x)
 
 !!x <=> Boolean(x)
-
-toFixed()根据小数点后的指定位数将数字转换为字符串，toPrecision()根据指定的有效数字将数字转换成字符串。
-
-Number():可以用于任何数据类型转换成数值；
-
-parseInt()、parseFloat():专门用于把字符串转换成数值；parseInt()只解析整数，parseFloat()可以解析浮点数和整数。
 
 全局作用域可以不写var语句，局部作用域必须使用var，否则会作用在全局作用域上。
 
@@ -86,3 +42,72 @@ alert(i); // 10
 垃圾收集方式：
 1. 标记清除：当变量进入环境时，将其标记为“进入环境”；当变量离开环境时，将其标记为“离开环境”。只有标记为“离开环境”的变量才能被回收内存。此方法是当前主流的垃圾回收算法。
 2. 引用计数：跟踪记录每个值被引用的次数。当声明一个变量并将一个引用类型值赋给该变量时，这个值的引用次数就是1。如果同一个值又被赋给另一个变量，则该值的引用次数加 1。相反，如果包含对这个值引用的变量又取得了另外一个值，则这个值的引用次数减1。当这个值的引用次数变成0时，就可以将其占用的内存空间回收回来。（存在相互引用占用内存不释放的风险，解决方法是手动重置为null来解除引用。）
+
+## Number
+JavaScript不区分整数和浮点数。
+
+十六进制以“0x”或者“0X” 为前缀，八进制以数字0为前缀。
+
+NaN == NaN // false;
+
+NaN != NaN // true。
+
+isNaN()函数，如果参数是NaN或者非数字值，则返回true。
+
+isFinite()函数，在参数不是NaN、Infinity或-Infinity的时候返回true。
+
+getMonth()函数从0开始计算月份，getDay函数0代表周日，5代表周一。
+
+- toFixed()根据小数点后的指定位数将数字转换为字符串。
+- toExponential()返回以指数表示法表示的数值的字符串形式。
+- toPrecision()根据指定的有效数字将数字转换成字符串。toPrecision()会根据要处理的数值决定到底是要用toFixed还是用toExponential()。
+
+Number():可以用于任何数据类型转换成数值；
+
+parseInt()、parseFloat():专门用于把字符串转换成数值；parseInt()只解析整数，parseFloat()可以解析浮点数和整数。
+
+## String
+JavaScript中的字符串是固定不变的，任何方法都返回新字符串，原字符串不发生改变。
+
+三个创建新字符串的方法：
+- slice()
+- substring()
+- slice()和substring()接收一或两个参数，参数1指定起始位置，参数2表示字符串到哪里结束。
+- substr()参数1同上，参数2指定返回的字符串个数，如果没有参数2，则将字符串的长度作为结束位置。
+- 在传递给这些方法的参数是负值的情况下，slice()方法会将传入的负值与字符串的长度相加；substr()方法将负的第一个参数加上字符串的长度，而将负的第二个参数转换为0；substring()方法会把所有负值参数都转换为0。
+
+## Boolean
+假值列表：
+- undefined
+- null
+- 0
+- -0
+- NaN
+- ""
+
+其余所有值都会转换成true。
+
+## Object
+var s = "hello world";s.length; // 字符串不是对象，读取其属性时会通过new String()临时创建一个叫做包装对象的对象，操作基本类型值的语句一经执行完毕，随即这个对象会被销毁。（数字则调用Number()，布尔值调用Boolean）
+
+```
+// 把字符串传给Object构造函数，就会创建String的实例，数值对应Number，布尔值对应Boolean。
+var obj = new Object('some text')
+alert(obj instanceof String) // true
+```
+
+```
+// 布尔表达式中的所有对象都会被转换为true
+var o = new Boolean(false) // o <=> true
+```
+
+对象的比较并非值的比较，即使两个对象包含同样的属性和值，它们也是不相等的。各个索引元素完全相等的两个数组也不相等。（两个单独的对象用不相等，两个单独的数组用不相等。）
+
+想到得到一个对象或数组的副本，必须显式复制对象的每个属性或数组的每个元素。
+
+## Math
+- Math.ceil()向上舍入
+- Math.floor()向下舍入
+- Math.round()四舍五入
+
+值 = Math.floor(Math.random * 可能的值的总数 + 第一个可能的值)
