--- a/对象.md
+++ b/对象.md
@@ -27,8 +27,14 @@
 设置属性的特性用Object.defineProperty()
 
 Object.getPrototypeof(对象) 可以查询对象的原型。
+```
+// Object.getPrototypeOf()返回对象prototype的值
+Object.getPrototypeOf(person1) == Person.prototype // true
+```
 
 x.isPrototypeOf(y)检测x是否是y的原型。
+
+使用hasOwnProperty()方法可以检测一个属性是存在于实例中，还是存在于原型中。
 
 想要获得对象的类信息，可以调用对象的toString()方法，提取返回字符串的第8位到倒数第2位之间的字符。([object classinfo])
 
@@ -37,3 +43,47 @@ x.isPrototypeOf(y)检测x是否是y的原型。
 Infinity、-Infinity和NaN序列化的结果是null。
 
 valueOf和toString方法区别，当需要将对象转换为某种原始值而非字符串的时候需要使用valueOf，尤其是转换成数字的时候。
+
+对象的四个数据属性：
+- configurable
+- enumerable
+- writable
+- value
+
+设置对象的属性调用Object.defineProperty(属性所在的对象, 属性名, { 属性配置 }).
+
+对象的四个访问属性：
+- configurable
+- enumeralbe
+- set
+- get
+
+JavaScript对每个创建的对象都会设置一个原型，指向它的原型对象。
+```
+var arr = [1, 2, 3]
+// 其原型链是：
+arr --> Array.prototype --> Object.prototype --> null
+```
+
+对于任意函数 `F.prototype.constructor == F`，函数的原型的构造函数等于函数本身。
+
+```
+// 传统类定义
+function Student(name) {
+    this.name = name;
+}
+Student.prototype.hello = function() {
+    alert('Hello, ' + this.name + '!')
+}
+
+// ES6类定义
+class Student {
+    constructor(name) {
+        this.name = name
+    }
+
+    hello() {
+        alert('Hello, ' + this.name + '!')
+    }
+}
+```
