--- a/对象.md
+++ b/对象.md
@@ -32,7 +32,7 @@ Object.getPrototypeof(对象) 可以查询对象的原型。
 Object.getPrototypeOf(person1) == Person.prototype // true
 ```
 
-x.isPrototypeOf(y)检测x是否是y的原型。
+SuperType.prototype.isPrototypeOf(instance)检测SuperType是否是instance的原型。
 
 使用hasOwnProperty()方法可以检测一个属性是存在于实例中，还是存在于原型中。
 
@@ -87,3 +87,7 @@ class Student {
     }
 }
 ```
+
+原型具有动态性，对原型对象所做的任何修改都能够立即从实例上反映出来，即使是先创建了实例后修改原型。
+
+
