--- a/对象.md
+++ b/对象.md
@@ -5,6 +5,21 @@
 - 关键字new
 - Object.create
 
+```
+// Object.create()方法接收两个参数：一个用作新对象原型的对象和（可选的）一个为新对象定义额外属性的对象（同Object.defineProperties()方法的第二个参数格式）。
+var person = {
+    name: 'pjx'
+}
+var anotherPerson = Object.create(person)
+anotherPerson.name = 'Greg'
+// or
+var anotherPerson = Object.create(person, {
+    name: {
+        value: 'Greg'
+    }
+})
+```
+
 判断某个属性是否存在于某个对象中，可以用in、hasOwnProperty和propertyIsEnumerable。
 
 删除一个不存在的属性不会报错，delete返回true。
@@ -32,7 +47,7 @@ Object.getPrototypeof(对象) 可以查询对象的原型。
 Object.getPrototypeOf(person1) == Person.prototype // true
 ```
 
-x.isPrototypeOf(y)检测x是否是y的原型。
+SuperType.prototype.isPrototypeOf(instance)检测SuperType是否是instance的原型。
 
 使用hasOwnProperty()方法可以检测一个属性是存在于实例中，还是存在于原型中。
 
@@ -87,3 +102,7 @@ class Student {
     }
 }
 ```
+
+原型具有动态性，对原型对象所做的任何修改都能够立即从实例上反映出来，即使是先创建了实例后修改原型。
+
+
