--- a/设计模式/单例模式.md
+++ b/设计模式/单例模式.md
@@ -1,6 +1,5 @@
-# 设计模式
 
-## 单例模式
+# 单例模式
 定义：保证一个类仅有一个实例，并提供一个访问它的全局访问点。
 
 最简单的创建单例代码`var a = {}`。
@@ -43,43 +42,3 @@ if (!obj) {
 ```
 
  单例模式通常把创建对象和管理单例的职责分布在两个不同的方法中，然后将两个方法组合起来实现单例。
-
- ## 策略模式
- 定义：定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
-
-```
-// 计算年终奖
-// 未使用策略模式的代码：
-var calculateBonus = function(level, salary) {
-    if (level === 'S') {
-        return salary * 4
-    }
-    if (level === 'A') {
-        return salary * 3
-    }
-    if (level === 'B') {
-        return salary * 2
-    }
-}
-
-// 使用策略模式的代码：
-var strategies = {
-    'S': function(salary) {
-        return salary * 4
-    },
-    'A': function(salary) {
-        return salary * 3
-    },
-    'B': function(salary) {
-        return salary * 2
-    }
-}
-var calculateBonus = function(level, salary) {
-    return strategies[level](salary)
-}
-```
-
-策略模式适合用来做表单校验。
-
-## 代理模式
-
