--- a/设计模式/发布-订阅模式.md
+++ b/设计模式/发布-订阅模式.md
@@ -2,3 +2,60 @@
 
 定义：又叫观察者模式，定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知。
 
+```
+// 通用实现
+// 发布-订阅功能函数
+var event = {
+    clientList: [],
+    listen(key, fn) {
+        if(!this.clientList[key]) {
+            this.clientList[key] = []
+        }
+        this.clientList[key].push(fn)
+    },
+    remove(key, fn) {
+        var fns = this.clientList[key]
+
+        if(!fns) {
+            return false
+        }
+
+        if(!fn) {
+            fns && fns.length ===0
+        } else {
+            for(var l = fns.length - 1; l>= 0; l--) {
+                var _fn = fns[l]
+                if(_fn === fn) {
+                    fns.splice(l, 1)
+                }
+            }
+        }
+    },
+    trigger() {
+        var key = Array.prototype.shift.call(arguments),
+            fns = this.clientList[key]
+
+        if(!fns || fns.length === 0) {
+            return false
+        }
+
+        for(var i = 0, fn; fn = fns[i++]) {
+            fn.apply(this, arguments)
+        }
+    }
+}
+
+// 安装函数
+var installEvent = function(obj) {
+    for(var i in event) {
+        obj[i] = event[i]
+    }
+}
+
+// 给对象增加发布-订阅功能
+var salesOffices = {}
+installEvent(salesOffices)
+
+// 删除某订阅
+salesOffices.remove('xxx', fn)
+```
