--- a/设计模式/命令模式.md
+++ b/设计模式/命令模式.md
@@ -1,2 +1,28 @@
 # 命令模式
 
+应用场景：有时候需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的 操作是什么，此时希望用一种松耦合的方式来设计软件，使得请求发送者和请求接收者能够消除彼此之间的耦合关系。
+
+```
+// 使用闭包实现的命令模式
+var setCommand = function(button, func) {
+    button.onclick = function() {
+        func()
+    }
+}
+
+var MenuBar = {
+    refresh() {
+        console.log('刷新')
+    }
+}
+
+var RefreshMenuBarCommand = function(receiver) {
+    return function() {
+        receiver.refresh()
+    }
+}
+
+vaar refreshMenuBarCommand = RefreshMenuBarCommand(MenuBar)
+
+setCommand(button1, refreshMenuBarCommand)
+```
