--- a/设计模式/发布-订阅模式.md
+++ b/设计模式/发布-订阅模式.md
@@ -56,6 +56,12 @@ var installEvent = function(obj) {
 var salesOffices = {}
 installEvent(salesOffices)
 
+salesOffices.listen('eventA', funciton(price) {
+    // somethind to do
+})
+
+salesOffices.trigger('eventA', 1000)
+
 // 删除某订阅
 salesOffices.remove('xxx', fn)
 ```
