--- a/设计模式/命令模式.md
+++ b/设计模式/命令模式.md
@@ -22,7 +22,7 @@ var RefreshMenuBarCommand = function(receiver) {
     }
 }
 
-vaar refreshMenuBarCommand = RefreshMenuBarCommand(MenuBar)
+var refreshMenuBarCommand = RefreshMenuBarCommand(MenuBar)
 
 setCommand(button1, refreshMenuBarCommand)
 ```
