--- a/设计模式/命令模式.md
+++ b/设计模式/命令模式.md
@@ -26,3 +26,40 @@ var refreshMenuBarCommand = RefreshMenuBarCommand(MenuBar)
 
 setCommand(button1, refreshMenuBarCommand)
 ```
+
+宏命令是一组命令的集合，通过执行宏命令的方式，可以一次执行一批命令。
+
+```
+// 创建宏命令
+var closeCommand = {
+    execute() {
+        // something to do
+    }
+}
+
+var openCommand = {
+    execute() {
+        // something to do
+    }
+}
+
+var  MacroCommand = function() {
+    return {
+        commandsList: [],
+        add(command) {
+            this.commandsList.push(command)
+        },
+        execute() {
+            for(var i = 0, command; command = this.commandsList[i++]) {
+                command.execute()
+            }
+        }
+    }
+}
+
+var macroCommand = MacroCommand()
+macroCommand.add(closeCommand)
+macroCommand.add(openCommand)
+
+macroCommand.execute()
+```
