--- a/正则表达式.md
+++ b/正则表达式.md
@@ -39,7 +39,7 @@ m 多行匹配
 ```
 // 用于模式匹配的String方法
 // 返回匹配的第一个字符串的位置，如果找不到匹配的子串，则返回-1。不支持全局检索。
-"Javascript".search(/script/i) 
+"Javascript".search(/script/i)
 
 // 查找与替换
 text.replace(/javascript/gi, "JavaScript")
@@ -59,7 +59,7 @@ pattern.exec(text)
 pattern.test(text)
 ```
 
-RegExp实例属性：
+RegExp实例属性：
 - global：是否设置了g标志
 - ignoreCase：是否设置了i标志
 - lastIndex：开始搜索下一个匹配项的字符位置，从0算起
