--- a/设计模式/单例模式.md
+++ b/设计模式/单例模式.md
@@ -4,7 +4,33 @@
 
 最简单的创建单例代码`var a = {}`。
 
-避免单例的全局变量造成命名空间污染或者被别人覆盖的2种 方法：
+应用：
+```
+// 使用 CreateDiv 单例类，它的作用是负责在页 面中创建唯一的 div 节点
+var CreateDiv = function( html ){
+    this.html = html;
+    this.init();
+};
+CreateDiv.prototype.init = function(){
+    var div = document.createElement( 'div' );
+    div.innerHTML = this.html;
+    document.body.appendChild( div );
+};
+var ProxySingletonCreateDiv = (function(){
+    var instance;
+    return function( html ){
+        if ( !instance ){
+            instance = new CreateDiv( html );
+        }
+        return instance;
+    }
+})();
+var a = new ProxySingletonCreateDiv( 'sven1' );
+var b = new ProxySingletonCreateDiv( 'sven2' );
+alert( a === b );  //true
+```
+
+避免单例的全局变量造成命名空间污染或者被别人覆盖的2种方法：
 1. 使用命名空间
 ```
 var namespace = {
@@ -30,9 +56,7 @@ var user = (function() {
 })()
 ```
 
-惰性单例技术：在合适的时候才创建对象，并且只创建唯一的一个。
-
-
+惰性单例技术：在合适的时候才创建对象，并且只创建唯一的一个。
 ```
 // 用一个变量来标志是否创建过对象，如果是，则在下次直接返回这个已经创建好的对象
 var obj
@@ -41,4 +65,27 @@ if (!obj) {
 }
 ```
 
- 单例模式通常把创建对象和管理单例的职责分布在两个不同的方法中，然后将两个方法组合起来实现单例。
+单例模式通常把创建对象和管理单例的职责分布在两个不同的方法中，然后将两个方法组合起来实现单例。
+```
+// 创建唯一的浮窗
+var getSingle = function( fn ){
+   var result;
+   return function(){
+       return result || ( result = fn .apply(this, arguments ) );
+   }
+};
+var createLoginLayer = function(){
+
+    var div = document.createElement( 'div' );
+    div.innerHTML = '我是登录浮窗';
+    div.style.display = 'none';
+    document.body.appendChild( div );
+
+    return div;
+};
+var createSingleLoginLayer = getSingle( createLoginLayer );
+document.getElementById( 'loginBtn' ).onclick = function(){
+    var loginLayer = createSingleLoginLayer();
+    loginLayer.style.display = 'block';
+};
+```
