--- a/设计模式/策略模式.md
+++ b/设计模式/策略模式.md
@@ -1,9 +1,9 @@
 # 策略模式
 
- 定义：定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+ 定义：定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
 
+以计算年终奖为例：
 ```
-// 计算年终奖
 // 未使用策略模式的代码：
 var calculateBonus = function(level, salary) {
     if (level === 'S') {
@@ -16,13 +16,15 @@ var calculateBonus = function(level, salary) {
         return salary * 2
     }
 }
+```
 
+```
 // 使用策略模式的代码：
 var strategies = {
-    'S': function(salary) {
+    'S': function(salary) {
         return salary * 4
     },
-    'A': function(salary) {
+    'A': function(salary) {
         return salary * 3
     },
     'B': function(salary) {
