--- a/设计模式/代理模式.md
+++ b/设计模式/代理模式.md
@@ -1,10 +1,40 @@
 # 代理模式
 
-定义：为一个对象提供一个代用品或占位符，以便控制对它的访问。
+定义：为一个对象提供一个代用品或占位符，以便控制对它的访问。相当于找了一个中间商，帮助顾客更好的完成任务。
+
+```
+var Flower = function(){};
+var xiaoming = {
+    sendFlower: function( target){
+        var flower = new Flower();
+        target.receiveFlower( flower );
+    }
+};
+var B = {
+    receiveFlower: function( flower ){
+        A.listenGoodMood(function(){
+            var flower = new Flower();
+            A.receiveFlower( flower );
+        });
+    }
+};
+var A = {
+    receiveFlower: function( flower ){
+        // 监听 A 的好心情
+        console.log( '收到花 ' + flower );
+    },
+    listenGoodMood: function( fn ){
+        setTimeout(function(){ // 假设 10 秒之后 A 的心情变好
+            fn();
+        }, 10000 );
+    }
+};
+xiaoming.sendFlower( B );
+```
 
 代理模式有`保护代理`和`虚拟代理`：
 - 保护代理：过滤掉一些不必要的请求的；
-- 虚拟代理：把一些开销很大的对象，延迟到真正需要它的时候才去创建，如图片懒加载:
+- 虚拟代理：把一些开销很大的对象，延迟到真正需要它的时候才去创建，如图片懒加载:
 ```
 var myImage = (function() {
     var imgNode = document.createElement('img')
@@ -57,5 +87,5 @@ var proxyMult = (function() {
 proxyMult(1, 2, 3, 4)
 ```
 
-缓存代理可以用在分页功能的实现上，把已经拉取到的数据缓存起来，下次再请求同一页的时候，就可以直接使用缓存的数据了。
+缓存代理可以用在分页功能的实现上，把已经拉取到的数据缓存起来，下次再请求同一页的时候，就可以直接使用缓存的数据了。
 
