--- a/设计模式/发布-订阅模式.md
+++ b/设计模式/发布-订阅模式.md
@@ -57,7 +57,7 @@ var salesOffices = {}
 installEvent(salesOffices)
 
 salesOffices.listen('eventA', funciton(price) {
-    // somethind to do
+    // do something
 })
 
 salesOffices.trigger('eventA', 1000)
