--- a/设计模式/命令模式.md
+++ b/设计模式/命令模式.md
@@ -1,6 +1,6 @@
-# 命令模式
+# 命令模式
 
-应用场景：有时候需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的 操作是什么，此时希望用一种松耦合的方式来设计软件，使得请求发送者和请求接收者能够消除彼此之间的耦合关系。
+应用场景：有时候需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的操作是什么，此时希望用一种松耦合的方式来设计软件，使得请求发送者和请求接收者能够消除彼此之间的耦合关系。
 
 ```
 // 使用闭包实现的命令模式
@@ -27,19 +27,19 @@ var refreshMenuBarCommand = RefreshMenuBarCommand(MenuBar)
 setCommand(button1, refreshMenuBarCommand)
 ```
 
-宏命令是一组命令的集合，通过执行宏命令的方式，可以一次执行一批命令。
+宏命令是一组命令的集合，通过执行宏命令的方式，可以一次执行一批命令。
 
 ```
 // 创建宏命令
 var closeCommand = {
     execute() {
-        // something to do
+        // do something
     }
 }
 
 var openCommand = {
     execute() {
-        // something to do
+        // do something
     }
 }
 
