--- a/设计模式/组合模式.md
+++ b/设计模式/组合模式.md
@@ -10,6 +10,7 @@
 
 ```
 // 组合模式的例子--扫描文件夹
+
 // Folder
 var Folder = function(name) {
     this.name = name
@@ -43,7 +44,7 @@ File.prototype.scan = function() {
 var folder = new Folder('学习资料')
 var folder1 = new Folder('JavaScript')
 
-var file1 = new File('JavaScript设计模式与开发实践')
+var file1 = new File('JavaScript设计模式与开发实践')
 
 folder1.add(file1)
 
