--- a/设计模式/模板方法模式.md
+++ b/设计模式/模板方法模式.md
@@ -3,7 +3,11 @@
 模板方法模式由两部分组成，第一部分是抽象父类，第二部分是具体的实现子类。在模板方法模式中，子类实现中的相同部分被上移到父类中，而将不同的部分留在子类实现。
 
 ```
-// Coffee or Tea
+/*
+ *创建一个抽象父类来表示泡一杯饮料的整个过程。
+ *不论是 Coffee,还是 Tea,都被我们用Beverage来表示
+**/
+
 // Beverage模板类
 var Beverage = function() {}
 
@@ -13,7 +17,7 @@ Beverage.prototype.brew = function(){} // 浸泡
 
 Beverage.prototype.pourInCup = function() {} // 倒进杯子
 
-Beverage.prototype.addCondiments = function() {} // 加调料
+Beverage.prototype.addCondiments = function() {} // 加调料
 
 Beverage.prototype.init = function() {
     this.boilWater()
@@ -23,21 +27,33 @@ Beverage.prototype.init = function() {
 }
 
 // Coffee
-var Coffee = function() {}
-Coffee.prototype = new Beverage()
+var Coffee = Beverage({
+    brew: function() {
+        // 用沸水冲泡咖啡
+    },
+    pourInCup: function() {
+        // 把咖啡倒进被子
+    },
+    addCondiments: function() {
+        // 加糖和牛奶
+    }
+})
 
-Coffee.prototype.brew = function() {
-    // 用沸水冲泡咖啡
-}
+// Tea
+var Tea = Beverage({
+    brew: function(){
+        // 用沸水浸泡茶叶
+    },
+    pourInCup: function(){
+        // 把茶倒进杯子
+    },
+    addCondiments: function(){
+        // 加柠檬
+    }
+});
 
-Coffee.prototype.pourInCup = function() {
-    // 把咖啡倒进被子
-}
-
-Coffee.prototype.addCondiments = function() {
-    // 加糖和牛奶
-}
-
-var Coffee = new Coffee()
-Coffee.init()
+var coffee = new Coffee()
+coffee.init()
+var tea = new Tea();
+tea.init();
 ```
