--- a/设计模式/模板方法模式.md
+++ b/设计模式/模板方法模式.md
@@ -13,11 +13,20 @@ var Beverage = function() {}
 
 Beverage.prototype.boilWater = function() {} // 煮水
 
-Beverage.prototype.brew = function(){} // 浸泡
+// 浸泡
+Beverage.prototype.brew = function(){
+    throw new Error( '子类必须重写 brew 方法' );
+}
 
-Beverage.prototype.pourInCup = function() {} // 倒进杯子
+// 倒进杯子
+Beverage.prototype.pourInCup = function() {
+    throw new Error( '子类必须重写 pourInCup 方法' );
+}
 
-Beverage.prototype.addCondiments = function() {} // 加调料
+// 加调料
+Beverage.prototype.addCondiments = function() {
+    throw new Error( '子类必须重写 addCondiments 方法' );
+}
 
 Beverage.prototype.init = function() {
     this.boilWater()
