--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -5,3 +5,5 @@
 * [代理模式](设计模式/代理模式.md)
 * [迭代器模式](设计模式/迭代器模式.md)
 * [发布-订阅模式](设计模式/发布-订阅模式.md)
+* [享元模式模式](设计模式/享元模式模式.md)
+* [职责链模式模式](设计模式/职责链模式模式.md)
