--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -5,6 +5,9 @@
 * [代理模式](设计模式/代理模式.md)
 * [迭代器模式](设计模式/迭代器模式.md)
 * [发布-订阅模式](设计模式/发布-订阅模式.md)
+* [命令模式](设计模式/命令模式.md)
+* [组合模式](设计模式/组合模式.md)
+* [模板方法模式](设计模式/模板方法模式.md)
 * [享元模式模式](设计模式/享元模式模式.md)
-* [职责链模式模式](设计模式/职责链模式模式.md)
+* [职责链模式](设计模式/职责链模式.md)
 * [中介者模式](设计模式/中介者模式.md)
