--- a/设计模式/享元模式.md
+++ b/设计模式/享元模式.md
@@ -1,6 +1,6 @@
 # 享元模式
 
-享元模式是一种用于性能优化的模式，其核心是运用共享技术来有效支持大量细粒度的对象。
+定义：享元模式是一种用于性能优化的模式，其核心是运用共享技术来有效支持大量细粒度的对象。
 
 故事背景：假设有个内衣工厂，目前的产品有50种男式内衣和50种女士内衣，为了推销产品，工厂决定生产一些塑料模特来穿上他们的内衣拍成广告照片。正常情况下需要50个男模特和50个女模特，然后让他们每人分别穿上一件内衣来拍照。而享元模式则只需要一个男模和一个女模，让她们分别穿上50件衣服进行试穿拍照即可。
 
