--- a/设计模式/模板方法模式.md
+++ b/设计模式/模板方法模式.md
@@ -1,6 +1,6 @@
 # 模板方法模式
 
-模板方法模式由两部分组成，第一部分是抽象父类，第二部分是具体的实现子类。在模板方法模式中，子类实现中的相同部分被上移到父类中，而将不同的部分留在子类实现。
+定义：模板方法模式由两部分组成，第一部分是抽象父类，第二部分是具体的实现子类。在模板方法模式中，子类实现中的相同部分被上移到父类中，而将不同的部分留在子类实现。
 
 ```
 /*
