--- a/代码重构思路.md
+++ b/代码重构思路.md
@@ -5,7 +5,7 @@
 - 避免出现超大函数
 - 独立出来的函数有助于代码复用
 - 独立出来的函数更容易被覆写
-- 独立出来的函数如果拥有一个良好的命名，它本身就起到了注释的作用
+- 独立出来的函数如果拥有一个良好的命名，它本身就起到了注释的作用
 
 ```
 // 提炼前
@@ -114,7 +114,7 @@ var createXHR = () => {
 
 ### 5.提前让函数退出代替嵌套条件分支
 ```
-// 未提前退出函数导致嵌套严重
+// 未提前退出函数导致嵌套严重
 var del = (obj) => {
     var ret
     if(!obj.isReadOnly) { // 不为只读的才能被删除
@@ -146,12 +146,12 @@ var del = (obj) => {
 ```
 // 过长的参数列表导致维护困难
 var setUserInfo = function( id, name, address, sex, mobile, qq ){
-    // do something
+    // do something
 }
 
 // 使用对象代替
 var setUserInfo = function( userInfo ){
-    // do something
+    // do something
 }
 ```
 
