--- a/数组.md
+++ b/数组.md
@@ -37,14 +37,14 @@ sort比较函数：
 
 slice(起始位置, 结束位置)返回数组的一个片段，不会改变原数组。
 
-splice(参数1, 参数2, 其他参数)在数组中插入或删除元素，会改变原数组。参数1指定位置，参数2指定删除的元素个数，剩余参数指定了需要插入到数组的元素。splice()方法始终都会返回一个包含从原数组中删除的项的数组，如果没有删除任何项，则返回一个空数组。
+splice(参数1, 参数2, 其他参数)在数组中插入或删除元素，会改变原数组。参数1指定位置，参数2指定删除的元素个数，剩余参数指定了需要插入到数组的元素。splice()方法始终都会返回一个包含从原数组中删除的项的数组，如果没有删除任何项，则返回一个空数组。
 
 Array.isArray()用来判断一个未知的对象是否为数组。
 
 ```
 // 检测类数组对象
 function isArrayLike(o) {
-    if (o && 
+    if (o &&
         typeof(o) === "object" &&
         isFinite(o.length) &&
         o.length >= 0 &&
@@ -56,4 +56,4 @@ function isArrayLike(o) {
 }
 ```
 
-concat()方法在没有传递参数的情况下，只是复制当前数组并返回副本。
+concat()方法在没有传递参数的情况下，只是复制当前数组并返回副本。
