--- a/正则表达式.md
+++ b/正则表达式.md
@@ -64,6 +64,6 @@ RegExp实例属性：
 - ignoreCase：是否设置了i标志
 - lastIndex：开始搜索下一个匹配项的字符位置，从0算起
 - multiline：是否设置了m标志
-- source：正则表达式的字符串表示
+- source：正则表达式的字符串表示
 
-正则表达式的valueOf()方法会返回正则表达式本身。
+正则表达式的valueOf()方法会返回正则表达式本身。
