--- a/表达式和运算符.md
+++ b/表达式和运算符.md
@@ -3,7 +3,7 @@ JavaScript中所有的数字都是浮点型的。
 
 除数为0的运算结果为正无穷大或者负无穷大。
 
-0/0 = NaN（任何数值除以0都会返回NaN）
+0/0 = NaN（任何数值除以0都会返回NaN）
 
 加号的转换规则优先考虑字符串连接，比较运算符更偏爱数字。
 
