--- a/设计模式/单例模式.md
+++ b/设计模式/单例模式.md
@@ -58,7 +58,7 @@ var user = (function() {
 
 惰性单例技术：在合适的时候才创建对象，并且只创建唯一的一个。
 ```
-// 用一个变量来标志是否创建过对象，如果是，则在下次直接返回这个已经创建好的对象
+// 用一个变量来标志是否创建过对象，如果是，则在下次直接返回这个已经创建好的对象
 var obj
 if (!obj) {
     obj = xxx
