--- a/设计模式/状态模式.md
+++ b/设计模式/状态模式.md
@@ -40,14 +40,14 @@ light.init();
 上述代码缺点：
 - 违背了开放-封闭原则，每次修改light的状态都需要改动buttonWasPressed方法的代码；
 - 所有的状态有关的行为都封装在buttonWasPressed方法里，造成代码臃肿；
-- 仅仅通过改变state变量的值来表示状态改变，状态的切换不明显，无法一目了然地知道电灯的全部状态
+- 仅仅通过改变state变量的值来表示状态改变，状态的切换不明显，无法一目了然地知道电灯的全部状态
 - 状态切换靠堆砌if-else语句，修改状态可能涉及多个操作，难以维护和阅读。
 
 
 状态模式重构
 - 定义3个状态类
 - 改写Light类，使用状态对象记录当前的状态
-- 提供一个 方法来切换light对象的状态
+- 提供一个方法来切换light对象的状态
 ```
 /******************** 定义 3 个状态类 ************************/
 // OffLightState:
