--- a/设计模式/适配器模式.md
+++ b/设计模式/适配器模式.md
@@ -2,7 +2,7 @@
 
 定义：解决两个软件实体间的接口不兼容的问题，如港版的iphone充电插头需要一个适配器才能在大陆使用。
 
-假设谷歌地图和百度地图都提供同样的show方法来渲染地图，我们可以遍历渲染两个地图
+假设谷歌地图和百度地图都提供同样的show方法来渲染地图，我们可以遍历渲染两个地图
 ```
 var googleMap = {
     show: function(){
@@ -24,7 +24,7 @@ renderMap( baiduMap ); // 输出:开始渲染百度地图
 
 ```
 
-但是一旦某个地图用于渲染地图的方法不叫show，而叫display或者其他名称呢？
+但是一旦某个地图用于渲染地图的方法不叫show，而叫display或者其他名称呢？
 
 我们不应该也无法改变第三方的方法，此时我们可以增加一个适配器方法来解决兼容性问题
 ```
@@ -50,9 +50,4 @@ var renderMap = function( map ){
 };
 renderMap( googleMap ); // 输出:开始渲染谷歌地图
 renderMap( baiduMapAdapter ); // 输出:开始渲染百度地图
-
-作者：嗨呀豆豆呢
-链接：https://juejin.im/post/5c237cb3518825444612dd2a
-来源：掘金
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 ```
