--- a/函数.md
+++ b/函数.md
@@ -91,9 +91,9 @@ console.log(wordToUpperCase(['apple', 'pen', 'apple-pen']));
 
 apply()和call()方法的用途在于在特定的作用域中调用函数，实际上等于设置函数体内this对象的值。
 
-- apply()接收两个参数：一个是在其中运行函数的作用域，另一个是参数数组，也可以是arguments对象。
-- call()接收的第一个参数同apply，其余的参数都直接传递给函数。
+- apply()接收两个参数：一个是在其中运行函数的作用域，另一个是参数数组，也可以是arguments对象。
+- call()接收的第一个参数同apply，其余的参数都直接传递给函数。
 
-每个函数都有一个prototype属性，这个属性是一个指针，指向一个对象，这个对象的用途是包含可以由特定类型的所有实例共享的属性和方法。
+每个函数都有一个prototype属性，这个属性是一个指针，指向一个对象，这个对象的用途是包含可以由特定类型的所有实例共享的属性和方法。
 
-所有函数的默认原型都是Object的实例，因此默认原型都会包含一个内部指针，指向Object.prototype。这也正是所有自定义类型都会继承toString()、valueOf()等默认方法的根本原因。
+所有函数的默认原型都是Object的实例，因此默认原型都会包含一个内部指针，指向Object.prototype。这也正是所有自定义类型都会继承toString()、valueOf()等默认方法的根本原因。
