--- a/词法结构.md
+++ b/词法结构.md
@@ -1,6 +1,9 @@
 # 词法结构
-JavaScript是区分大小写的，而html不区分。
 
+### Javascript特点
+- 区分大小写的，而html不区分。
+- 高端的、动态的、弱类型的编程语言。
+
+### 直接量和字面量
 直接量：程序中直接使用的数据值。
-
-JavaScript是一门高端的、动态的、弱类型的编程语言。
+字面量：变量的字符串表示形式，它不是一种值，而是一种变量记法。
