--- a/数组.md
+++ b/数组.md
@@ -11,6 +11,8 @@
 
 给数组的length属性设置一个小于当前长度的非负整数n时，当前数组中索引大于或等于n的元素将从中删除。
 
+
+### 数组方法
 ```
 push()：末尾添加；
 unshift()：头部添加。
@@ -29,7 +31,7 @@ map()：对数组中的每一项运行给定函数，返回每次函数调用的
 some()：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回true。
 ```
 
-在数组上不应该使用for/in循环遍历，因为它能够枚举继承的属性，结合hasOwnProperty可以过滤。
+**ps:在数组上不应该使用for/in循环遍历，因为它能够枚举继承的属性，结合hasOwnProperty可以过滤。**
 
 sort比较函数：
 - 如果数组包含undefined元素，它们将会被排到数组的尾部
