--- a/类型、值和变量.md
+++ b/类型、值和变量.md
@@ -5,8 +5,10 @@ JavaScript的数据类型：
 
 原始类型：数字、字符串和布尔值。
 
+### null和undefined
 两个特殊的原始值：null（空）和undefined（未定义）。它们是各自特殊类型的唯一成员。
 
+```
 typeof(null) // object，null值表示一个空指针对象
 
 typeof(undefined) //undefined
@@ -14,6 +16,7 @@ typeof(undefined) //undefined
 null == undefined // true;
 
 null === undefined // false。
+```
 
 对未初始化的变量执行typeof操作会返回undefined，而对未声明的变量执行typeof操作也会返回undefined。
 
@@ -38,10 +41,6 @@ for (var i = 0; i < 10; i++) {
 }
 alert(i); // 10
 ```
-
-垃圾收集方式：
-1. 标记清除：当变量进入环境时，将其标记为“进入环境”；当变量离开环境时，将其标记为“离开环境”。只有标记为“离开环境”的变量才能被回收内存。此方法是当前主流的垃圾回收算法。
-2. 引用计数：跟踪记录每个值被引用的次数。当声明一个变量并将一个引用类型值赋给该变量时，这个值的引用次数就是1。如果同一个值又被赋给另一个变量，则该值的引用次数加 1。相反，如果包含对这个值引用的变量又取得了另外一个值，则这个值的引用次数减1。当这个值的引用次数变成0时，就可以将其占用的内存空间回收回来。（存在相互引用占用内存不释放的风险，解决方法是手动重置为null来解除引用。）
 
 ## Number
 JavaScript不区分整数和浮点数。
@@ -111,3 +110,8 @@ var o = new Boolean(false) // o <=> true
 - Math.round()四舍五入
 
 值 = Math.floor(Math.random * 可能的值的总数 + 第一个可能的值)
+
+### 垃圾收集方式
+
+1. 标记清除：当变量进入环境时，将其标记为“进入环境”；当变量离开环境时，将其标记为“离开环境”。只有标记为“离开环境”的变量才能被回收内存。此方法是当前主流的垃圾回收算法。
+2. 引用计数：跟踪记录每个值被引用的次数。当声明一个变量并将一个引用类型值赋给该变量时，这个值的引用次数就是1。如果同一个值又被赋给另一个变量，则该值的引用次数加 1。相反，如果包含对这个值引用的变量又取得了另外一个值，则这个值的引用次数减1。当这个值的引用次数变成0时，就可以将其占用的内存空间回收回来。（存在相互引用占用内存不释放的风险，解决方法是手动重置为null来解除引用。）
