--- a/设计模式/中介者模式.md
+++ b/设计模式/中介者模式.md
@@ -1,10 +1,14 @@
 # 中介者模式
 
-定义：中介者模式的作用就是解除对象与对象之间的紧耦合关系。增加一个中介者对象后，所有的相关对象都通过中介者对象来通信，而不是互相引用，所以当一个对象发生改变时，只需要通知中介者对象即可。中介者使各对象之间耦合松散，而且可以独立地改变它们之间的交互。中介者模式使网状的多对多关系变成了相对简单的一对多关系。
+**定义**
 
-故事背景：假如在玩泡泡堂的游戏，使用泡泡击败对方所有玩家才能获得胜利。现在将队伍分成两个组进行游戏:
+中介者模式的作用就是解除对象与对象之间的紧耦合关系。增加一个中介者对象后，所有的相关对象都通过中介者对象来通信，而不是互相引用，所以当一个对象发生改变时，只需要通知中介者对象即可。中介者使各对象之间耦合松散，而且可以独立地改变它们之间的交互。中介者模式使网状的多对多关系变成了相对简单的一对多关系。
 
-代码实现
+**故事背景**
+
+假如在玩泡泡堂的游戏，使用泡泡击败对方所有玩家才能获得胜利。现在将队伍分成两个组进行游戏:
+
+**代码实现**
 ```
 /*玩家*/
 function Player( name, teamColor ){
@@ -82,7 +86,7 @@ player3.die();
 
 问题：每个玩家和其他玩家都是强耦合的关系，每个玩家状态的改变必须显式地通知其他所有玩家，当玩家数量上升时，随之而来的问题变得非常复杂。
 
-重构思路：
+**重构思路**
 - 定义Player构造函数和player对象的原型方法
 - 定义中介者对象playerDirector
 - 把操作转交给中介者对象
