--- a/设计模式/代理模式.md
+++ b/设计模式/代理模式.md
@@ -1,8 +1,14 @@
 # 代理模式
 
-定义：为一个对象提供一个代用品或占位符，以便控制对它的访问。相当于找了一个中间商，帮助顾客更好的完成任务。
+**定义**
 
-故事背景：小明喜欢姑娘A，想要送花给她，为了提高成功率则应该在A心情好的时候送。但是小明无法直接知道A的心情，而A的闺蜜B知道，这时小明就可以通过姑娘B来检测A的心情。当A心情好的时候，B告诉小明，小明送花，这个过程中，B就是中间的代理。
+为一个对象提供一个代用品或占位符，以便控制对它的访问。相当于找了一个中间商，帮助顾客更好的完成任务。
+
+**故事背景**
+
+小明喜欢姑娘A，想要送花给她，为了提高成功率则应该在A心情好的时候送。但是小明无法直接知道A的心情，而A的闺蜜B知道，这时小明就可以通过姑娘B来检测A的心情。当A心情好的时候，B告诉小明，小明送花，这个过程中，B就是中间的代理。
+
+**代码实现**
 ```
 var Flower = function(){};
 var xiaoming = {
@@ -33,7 +39,7 @@ var A = {
 xiaoming.sendFlower( B );
 ```
 
-代理模式有`保护代理`和`虚拟代理`：
+**代理模式**
 - 保护代理：过滤掉一些不必要的请求的；
 - 虚拟代理：把一些开销很大的对象，延迟到真正需要它的时候才去创建，如图片懒加载:
 ```
