--- a/设计模式/单例模式.md
+++ b/设计模式/单例模式.md
@@ -1,10 +1,12 @@
 # 单例模式
 
-定义：保证一个类仅有一个实例，并提供一个访问它的全局访问点。
+**定义**
+
+保证一个类仅有一个实例，并提供一个访问它的全局访问点。
 
 最简单的创建单例代码`var a = {}`。
 
-应用：
+**应用**
 ```
 // 使用 CreateDiv 单例类，它的作用是负责在页 面中创建唯一的 div 节点
 var CreateDiv = function( html ){
@@ -30,7 +32,7 @@ var b = new ProxySingletonCreateDiv( 'sven2' );
 alert( a === b );  //true
 ```
 
-避免单例的全局变量造成命名空间污染或者被别人覆盖的2种方法：
+**避免单例的全局变量造成命名空间污染或者被别人覆盖的2种方法**
 1. 使用命名空间
 ```
 var namespace = {
@@ -56,7 +58,8 @@ var user = (function() {
 })()
 ```
 
-惰性单例技术：在合适的时候才创建对象，并且只创建唯一的一个。
+**惰性单例技术**
+在合适的时候才创建对象，并且只创建唯一的一个。
 ```
 // 用一个变量来标志是否创建过对象，如果是，则在下次直接返回这个已经创建好的对象
 var obj
