--- a/设计模式/状态模式.md
+++ b/设计模式/状态模式.md
@@ -1,10 +1,14 @@
 # 状态模式
 
-定义：状态模式的关键是区分事物内部的状态，事物内部状态的改变往往会带来事物的行为改变。
+**定义**
 
-故事背景：电灯上面有一个开关，第一次按下打开弱光，第二次按下打开强光，第三次按下关闭电灯。
+状态模式的关键是区分事物内部的状态，事物内部状态的改变往往会带来事物的行为改变。
 
-代码实现
+**故事背景**
+
+电灯上面有一个开关，第一次按下打开弱光，第二次按下打开强光，第三次按下关闭电灯。
+
+**代码实现**
 ```
 var Light = function(){
     this.state = 'off'; // 给电灯设置初始状态 off
@@ -44,7 +48,7 @@ light.init();
 - 状态切换靠堆砌if-else语句，修改状态可能涉及多个操作，难以维护和阅读。
 
 
-状态模式重构
+**状态模式重构**
 - 定义3个状态类
 - 改写Light类，使用状态对象记录当前的状态
 - 提供一个方法来切换light对象的状态
