--- a/设计模式/组合模式.md
+++ b/设计模式/组合模式.md
@@ -1,10 +1,12 @@
 # 组合模式
 
-定义：用小的子对象来构建更大的对象，而这些小的子对象本身也许是油更小的“孙对象”构成的。
+**定义**
+
+用小的子对象来构建更大的对象，而这些小的子对象本身也许是油更小的“孙对象”构成的。
 
 组合模式将对象组合成树形结构，以表示“部分-整体”的层次结构。
 
-组合模式的适用情况：
+**组合模式的适用情况**
 - 表示对象的部分-整体层次结构
 - 希望统一对待树中的所有对象
 
