--- a/设计模式/装饰者模式.md
+++ b/设计模式/装饰者模式.md
@@ -1,10 +1,14 @@
 # 装饰者模式
 
-定义：在开发中，动态地给某个对象添加一些额外的职业，而不影响从这个对象派生出来的其它对象。
+**定义**
 
-故事背景：假设我们在编写一个飞机大战的游戏，随着经验值的增加，我们操作的飞机对象可以升级成更厉害的飞机，一开始这些飞机只能发射普通的子弹，升到第二级时可以发射导弹，升到第三级时可以发射原子弹。
+在开发中，动态地给某个对象添加一些额外的职业，而不影响从这个对象派生出来的其它对象。
 
-代码实现
+**故事背景**
+
+假设我们在编写一个飞机大战的游戏，随着经验值的增加，我们操作的飞机对象可以升级成更厉害的飞机，一开始这些飞机只能发射普通的子弹，升到第二级时可以发射导弹，升到第三级时可以发射原子弹。
+
+**代码实现**
 ```
 var plane = {
     fire: function(){
