--- a/设计模式/迭代器模式.md
+++ b/设计模式/迭代器模式.md
@@ -1,8 +1,10 @@
 # 迭代器模式
 
-定义：提供一种方法顺序访问一个聚合对象中的各个元素，而又不需要暴露该对象的内部表示。
+**定义**
 
-迭代器可以分为`内部迭代器`和`外部迭代器`：
+提供一种方法顺序访问一个聚合对象中的各个元素，而又不需要暴露该对象的内部表示。
+
+**迭代器类型**
 - 内部迭代器：函数内部事先定义好迭代规则（缺少灵活性）
 - 外部迭代器：必须显式地请求迭代下一个元素（增强了灵活性，但是也增加了复杂度）
 
