--- a/设计模式/适配器模式.md
+++ b/设计模式/适配器模式.md
@@ -1,6 +1,8 @@
 # 适配器模式
 
-定义：解决两个软件实体间的接口不兼容的问题，如港版的iphone充电插头需要一个适配器才能在大陆使用。
+**定义**
+
+解决两个软件实体间的接口不兼容的问题，如港版的iphone充电插头需要一个适配器才能在大陆使用。
 
 假设谷歌地图和百度地图都提供同样的show方法来渲染地图，我们可以遍历渲染两个地图
 ```
