--- a/正则表达式.md
+++ b/正则表达式.md
@@ -1,4 +1,6 @@
 # 正则表达式
+
+### 元字符
 ```
 \w <=> [a-zA-Z0-9]
 \W <=> [^a-zA-Z0-9]
@@ -9,6 +11,7 @@
 . 匹配除换行符 \n 之外的任何单字符
 ```
 
+### 限定符
 ```
 {n, m} 匹配至少n次，不超过m次
 {n, } 匹配至少n次
@@ -16,10 +19,11 @@
 ? <=> {0, 1}
 + <=> {1, }
 * <=> {0, }
-
-ps:非贪婪的匹配，在待匹配的字符后跟随一个问号即可，如??,+?,*?。会尽可能少地匹配。
 ```
 
+**ps：非贪婪的匹配，在待匹配的字符后跟随一个问号即可，如??,+?,*?。会尽可能少地匹配。**
+
+### 定位符
 ```
 ^ 匹配开头
 $ 匹配结尾
@@ -29,15 +33,18 @@ $ 匹配结尾
 
 括号()会将捕获的字符缓存起来供以后使用，通过`?:`可以取消缓存。
 
+
+### 修饰符
 ```
-// 修饰符
 i 不区分大小写
 g 全局匹配
 m 多行匹配
 ```
 
+### 匹配方法
+
+
 ```
-// 用于模式匹配的String方法
 // 返回匹配的第一个字符串的位置，如果找不到匹配的子串，则返回-1。不支持全局检索。
 "Javascript".search(/script/i)
 
@@ -59,7 +66,7 @@ pattern.exec(text)
 pattern.test(text)
 ```
 
-RegExp实例属性：
+### RegExp实例属性
 - global：是否设置了g标志
 - ignoreCase：是否设置了i标志
 - lastIndex：开始搜索下一个匹配项的字符位置，从0算起
