--- a/设计模式/发布-订阅模式.md
+++ b/设计模式/发布-订阅模式.md
@@ -1,7 +1,10 @@
 # 发布-订阅模式
 
-定义：又叫观察者模式，定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知。
+**定义**
 
+又叫观察者模式，定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知。
+
+**代码实现**
 ```
 // 通用实现
 // 发布-订阅功能函数
@@ -66,4 +69,4 @@ salesOffices.trigger('eventA', 1000)
 salesOffices.remove('xxx', fn)
 ```
 
-在JavaScript中，一般用回调函数的方式来实现发布-订阅模式。
+**在JavaScript中，一般用回调函数的方式来实现发布-订阅模式。**
