--- a/设计模式/策略模式.md
+++ b/设计模式/策略模式.md
@@ -1,8 +1,10 @@
 # 策略模式
 
-定义：定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+**定义**
 
-以计算年终奖为例：
+定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+
+**以计算年终奖为例**
 ```
 // 未使用策略模式的代码：
 var calculateBonus = function(level, salary) {
