--- a/设计模式/策略模式.md
+++ b/设计模式/策略模式.md
@@ -2,11 +2,15 @@
 
 **定义**
 
-定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。目的解释将算法的使用和算法的实现分离开来。
 
-**以计算年终奖为例**
+**故事背景**
+
+以计算年终奖为例。
+
+
+**未使用策略模式的代码**
 ```
-// 未使用策略模式的代码：
 var calculateBonus = function(level, salary) {
     if (level === 'S') {
         return salary * 4
@@ -20,8 +24,13 @@ var calculateBonus = function(level, salary) {
 }
 ```
 
+缺点：
+- 包含许多if-else语句，需要覆盖所有逻辑
+- 缺乏弹性，要深入代码内部才能做改动，违背“开放-封闭”原则
+- 复用性差，只有通过复制粘贴才能在其他地方使用
+
+**使用策略模式的代码**
 ```
-// 使用策略模式的代码：
 var strategies = {
     'S': function(salary) {
         return salary * 4
