--- a/ES6/目录.md
+++ b/ES6/目录.md
@@ -1,6 +1,6 @@
 # ES6
 
-* [变量的解构赋值](ES6/变量的解构赋值.md)
+* [变量的解构赋值](变量的解构赋值.md)
 * [字符串的扩展](ES6/字符串的扩展.md)
 * [数值的扩展](ES6/数值的扩展.md)
 * [Set数据结构](ES6/Set数据结构.md)
