--- a/ES6/变量的解构赋值.md
+++ b/ES6/变量的解构赋值.md
@@ -16,7 +16,7 @@ let [x, y] = [1, 2, 3];
 // x: 1
 // y: 2
 ```
-**ps：如果等号的右边不是数组（或者严格地说，不是可遍历的结构，参见《Iterator》一章），那么将会报错。**
+**ps：如果等号的右边不是数组，那么将会报错。**
 
 ### 默认值
 
