--- a/数据结构&算法/排序算法.md
+++ b/数据结构&算法/排序算法.md
@@ -1,12 +1,92 @@
 # 排序算法
 
-**冒泡排序**
+**交换数据两个位置的值**
+```
+const swap = (arr, index1, index2) => {
+    let temp = arr[index1]
+    arr[index1] = arr[index2]
+    arr[index2] = temp
+}
+```
 
+**冒泡排序**
+```
+function bubbleSort = (arr) => {
+    const len = arr.length
+    for(let i = 0; i < len; i++) {
+        for(let j = 0; j < len - 1; j++){
+            if(arr[j] > arr[j + 1]) {
+                swap(arr, j, j + 1)
+            }
+        }
+    }
+}
+```
 **插入排序**
+```
+function insertionSort = (arr) => {
+    const len = arr.length
+    let j, temp
+
+    for(let i = 1; i < len; i++) {
+        j = i
+        temp = arr[i]
+        while(j > 0 && arr[j-1] > temp) {
+            arr[j] = arr[j-1]
+            j--
+        }
+        arr[j] = temp
+    }
+}
+```
 
 **选择排序**
+```
+function selectionSort = () => {
+    const len = arr.length
+    let indexMin
+
+    for(let i = 0; i < len - 1; i++) {
+        indexMin = j
+        for(let j = i; j < len; j++){
+            if(arr[indexMin] > arr[j]) {
+                indexMin = j
+            }
+        }
+        if(i !== indexMin) {
+            swap(i, indexMin)
+        }
+    }
+}
+```
 
 **归并排序**
+```
+function mergeSortRec = (arr) => {
+    const len = arr.length
+    if(len == 1) {
+        return arr
+    }
+    let mid = Math.floor(len / 2)
+    let left = arr.slice(0, mid)
+    let right = arr.slice(mid, len)
+
+    return merge(mergeSortRec(left), mergeSortRec(right))
+}
+
+
+```
 
 **快速排序**
-
+```
+function bubbleSort = () => {
+    const len = arr.length
+    for(let i = 0; i < len; i++) {
+        for(let j = 0; j < len - 1; j++){
+            if(arr[j] > arr[j + 1]) {
+                swap(arr, j, j + 1)
+            }
+        }
+    }
+}
+```
