--- a/数据结构&算法/排序算法.md
+++ b/数据结构&算法/排序算法.md
@@ -9,9 +9,14 @@ const swap = (arr, index1, index2) => {
 }
 ```
 
-**冒泡排序**
+#### 冒泡排序
+
+比较相邻的两个元素，如果第一个比第二个大，则交换他们，元素上移至正确的顺序。以此类推，对n个元素进行n*n次比较。（最简单的排序算法，同时也是速度最慢的一个。）`
+
+算法复杂度：`O(n^2)`
+
 ```
-function bubbleSort = (arr) => {
+function bubbleSort(arr) {
     const len = arr.length
     for(let i = 0; i < len; i++) {
         for(let j = 0; j < len - 1; j++){
@@ -22,27 +27,28 @@ function bubbleSort = (arr) => {
     }
 }
 ```
-**插入排序**
+改进版：
 ```
-function insertionSort = (arr) => {
+function bubbleSort(arr) {
     const len = arr.length
-    let j, temp
-
-    for(let i = 1; i < len; i++) {
-        j = i
-        temp = arr[i]
-        while(j > 0 && arr[j-1] > temp) {
-            arr[j] = arr[j-1]
-            j--
+    for(let i = 0; i < len; i++) {
+        // 内循环减去外循环，避免重复比较
+        for(let j = 0; j < len - 1 - i; j++){
+            if(arr[j] > arr[j + 1]) {
+                swap(arr, j, j + 1)
+            }
         }
-        arr[j] = temp
     }
 }
 ```
+#### 选择排序
 
-**选择排序**
+找到最小的值放在第一位，接着找到第二小的值放在第二位，以此类推。
+
+算法复杂度：`O(n^2)`
+
 ```
-function selectionSort = () => {
+function selectionSort(arr) {
     const len = arr.length
     let indexMin
 
@@ -60,9 +66,42 @@ function selectionSort = () => {
 }
 ```
 
-**归并排序**
+#### 插入排序
+
+每次排一个数组，逐步构建最后的排序数组。如果第一项已经排序，接着和第二项比较，判断第二项是保持原位还是插到第一项之前。接着判断第三项的位置，是放在前面已经排好的两项的哪个位置，以此类推。
+
+算法复杂度：最佳情况`O(n)`，最坏情况`O(n^2)`。
+
+排序小型数组时，此算法阿比选择排序和冒泡排序性能好。
 ```
-function mergeSortRec = (arr) => {
+function insertionSort(arr) {
+    const len = arr.length
+    let j, temp
+
+    for(let i = 1; i < len; i++) {
+        j = i
+        temp = arr[i]
+        while(j > 0 && arr[j-1] > temp) {
+            arr[j] = arr[j-1]
+            j--
+        }
+        arr[j] = temp
+    }
+}
+```
+
+#### 归并排序
+
+分而治之的思想，将原始数组切分成较小的数组，直到每个小数组只有一个位置，然后将小数组合并成大数组，直到最后最后只有一个排序完毕的大数组。这个过程是递归的。
+
+算法复杂度：`O(nlog^n)`。
+
+```
+function mergeSort() {
+    return mergeSortRec(arr)
+}
+
+function mergeSortRec(arr) {
     const len = arr.length
     if(len == 1) {
         return arr
@@ -74,19 +113,75 @@ function mergeSortRec = (arr) => {
     return merge(mergeSortRec(left), mergeSortRec(right))
 }
 
+function merge(left, right) {
+    let result = []
+    let il = 0
+    let ir = 0
 
-```
-
-**快速排序**
-```
-function bubbleSort = () => {
-    const len = arr.length
-    for(let i = 0; i < len; i++) {
-        for(let j = 0; j < len - 1; j++){
-            if(arr[j] > arr[j + 1]) {
-                swap(arr, j, j + 1)
-            }
+    while(il < left.length && ir < right.length) {
+        if(left[il] < right[ir]) {
+            result.push(left[il++])
+        } else {
+            result.push(right[ir++])
         }
     }
+
+    while(il < left.length) {
+        result.push(left[il++])
+    }
+
+    while(ir < right.length) {
+        result.push(right[ir++])
+    }
+
+    return result
+}
+
+```
+
+#### 快速排序
+
+算法复杂度：`O(nlog^n)`。
+
+快速排序的性能通常比其他复杂度同为`O(nlog^n)`的要好。
+
+```
+function quickSort(arr) {
+    quick(arr, 0, arr.length - 1)
+}
+
+function quick(arr, left, right) {
+    let index
+    if(arr.length > 1) {
+        index = partition(arr, left, right)
+
+        if(left < index -1) {
+            quick(arr, left, index - 1)
+        }
+
+        if(index < right) {
+            quick(arr, index, right)
+        }
+    }
+}
+
+function partition(arr, left, right) {
+    let pivot = arr[Math.floor((right + left) / 2)]
+
+    while(left <= right) {
+        while(arr[left] < pivot) {
+            left++
+        }
+        while(arr[right] > pivot) {
+            right--
+        }
+
+        if(left <= right) {
+            swap(arr, left, right)
+            left++
+            right--
+        }
+    }
+    return left
 }
 ```
