--- a/JavaScript基础/正则表达式.md
+++ b/JavaScript基础/正则表达式.md
@@ -74,3 +74,15 @@ pattern.test(text)
 - source：正则表达式的字符串表示
 
 正则表达式的valueOf()方法会返回正则表达式本身。
+
+### 常用正则表达式汇总
+```
+电话：/^1(3|4|5|6|7|8|9)[0-9]{9}$/
+
+身份证：/(^\d{15}$)|(^\d{18}$)|(^\d{17}(\d|X|x)$)/
+
+银行卡：/^\d{16}|\d{19}$/
+
+邮箱：/^([A-Za-z0-9_\-\.])+\@([A-Za-z0-9_\-\.])+\.([A-Za-z]{2,4})$/
+
+```
