--- a/ES6/字符串的扩展.md
+++ b/ES6/字符串的扩展.md
@@ -1,6 +1,6 @@
 # 字符串的扩展
 
-**includes()、startWith()、endWith()**
+### includes()、startWith()、endWith()
 
 传统上，JavaScript 只有indexOf方法，可以用来确定一个字符串是否包含在另一个字符串中。ES6 又提供了三种新方法。
 
@@ -16,7 +16,7 @@ s.endsWith('!') // true
 s.includes('o') // true
 ```
 
-**repeat**
+### repeat
 
 返回一个新字符串，表示将原字符串重复n次。
 
@@ -51,7 +51,7 @@ s.includes('o') // true
 'na'.repeat('3') // "nanana"
 ```
 
-**padStart()、padEnd()**
+### padStart()、padEnd()
 
 - padStart：头部补全
 - padEnd：尾部补全
@@ -65,3 +65,16 @@ s.includes('o') // true
 'x'.padEnd(5, 'ab') // 'xabab'
 'x'.padEnd(4, 'ab') // 'xaba'
 ```
+
+### trimStart()、trimEnd()
+trimStart()消除字符串头部的空格，trimEnd()消除尾部的空格。它们返回的都是新字符串，不会修改原始字符串。
+
+```
+const s = '  abc  ';
+
+s.trim() // "abc"
+s.trimStart() // "abc  "
+s.trimEnd() // "  abc"
+```
+
+浏览器还定义了这两个方法的别名：trimLeft()是trimStart()的别名，trimRight()是trimEnd()的别名。
