--- a/数据结构&算法/排序算法.md
+++ b/数据结构&算法/排序算法.md
@@ -9,7 +9,7 @@ const swap = (arr, index1, index2) => {
 }
 ```
 
-#### 冒泡排序
+### 冒泡排序
 
 比较相邻的两个元素，如果第一个比第二个大，则交换他们，元素上移至正确的顺序。以此类推，对n个元素进行n*n次比较。（最简单的排序算法，同时也是速度最慢的一个。）`
 
@@ -41,7 +41,7 @@ function bubbleSort(arr) {
     }
 }
 ```
-#### 选择排序
+### 选择排序
 
 找到最小的值放在第一位，接着找到第二小的值放在第二位，以此类推。
 
@@ -66,7 +66,7 @@ function selectionSort(arr) {
 }
 ```
 
-#### 插入排序
+### 插入排序
 
 每次排一个数组，逐步构建最后的排序数组。如果第一项已经排序，接着和第二项比较，判断第二项是保持原位还是插到第一项之前。接着判断第三项的位置，是放在前面已经排好的两项的哪个位置，以此类推。
 
@@ -90,7 +90,7 @@ function insertionSort(arr) {
 }
 ```
 
-#### 归并排序
+### 归并排序
 
 分而治之的思想，将原始数组切分成较小的数组，直到每个小数组只有一个位置，然后将小数组合并成大数组，直到最后最后只有一个排序完毕的大数组。这个过程是递归的。
 
@@ -139,7 +139,7 @@ function merge(left, right) {
 
 ```
 
-#### 快速排序
+### 快速排序
 
 算法复杂度：`O(nlog^n)`。
 
