--- a/JavaScript基础/数组.md
+++ b/JavaScript基础/数组.md
@@ -2,46 +2,61 @@
 
 数组元素的索引不一定是连续的，它们之间可以有空缺。如果省略数组直接量的某个值，省略的元素将被赋予undefined值。
 
-**创建数组的方法**
-1. 使用数组直接量
-2. 调用构造函数new Array()，调用时可以传入一个数值指定长度
+### 创建数组的方法
 
-**稀疏数组**：包含从0开始的不连续索引的数组，length值大于元素的个数。
+1. 使用数组直接量
+2. 调用构造函数`new Array(size)`，调用时可以传入一个数值指定长度
+
+### 稀疏数组
+
+包含从0开始的不连续索引的数组，length值大于元素的个数。
 
 数组[,,,]是[undefined, undefined, undefined]，最后一个逗号后面没有元素产生。
 
 给数组的length属性设置一个小于当前长度的非负整数n时，当前数组中索引大于或等于n的元素将从中删除。
 
 
-**数组方法**
+### 数组方法
+
+**1. 操作方法**
 
 `push()`：末尾添加；
+
 `unshift()`：头部添加；
 
 `pop()`：尾部删除；
-`shift()`：头部删除。
 
-`every()`：对数组中的每一项运行给定函数，如果该函数对每一项都返回 true，则返回 true。
+`shift()`：头部删除；
 
-`filter()`：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
 
-`forEach()`：对数组中的每一项运行给定函数。这个方法没有返回值。
+`slice(起始位置, 结束位置)`：返回数组的一个片段，**不会改变原数组**。
+
+`splice(参数1, 参数2, 其他参数)`：在数组中插入或删除元素，**会改变原数组**。参数1指定位置，参数2指定删除的元素个数，剩余参数指定了需要插入到数组的元素。这个方法始终都会返回一个包含从原数组中删除的项的数组，如果没有删除任何项，则返回一个空数组。
+
+`concat()`：在没有传递参数的情况下，只是复制当前数组并返回副本。
+
+**2. 遍历方法**
+
+`every()`：对数组中的每一项运行给定函数，如果该函数对每一项都返回true，则返回true。
+
+`some()`：对数组中的每一项运行给定函数，如果该函数对任一项返回true，则返回true。
 
 `map()`：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
 
-`some()`：对数组中的每一项运行给定函数，如果该函数对任一项返回 true，则返回true。
+`forEach()`：对数组中的每一项运行给定函数。**这个方法没有返回值。**
+
+**3. 过滤方法**
+
+`filter()`：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
 
 `sort()`：比较函数
 - 如果数组包含undefined元素，它们将会被排到数组的尾部
 - 如果第一个参数应该在前，则应返回一个小于0的数值，否则返回大于0的数值。相等则返回0。
 
-`slice(起始位置, 结束位置)`：返回数组的一个片段，不会改变原数组。
 
-`splice(参数1, 参数2, 其他参数)`：在数组中插入或删除元素，会改变原数组。参数1指定位置，参数2指定删除的元素个数，剩余参数指定了需要插入到数组的元素。splice()方法始终都会返回一个包含从原数组中删除的项的数组，如果没有删除任何项，则返回一个空数组。
+### Array.isArray()
 
-`concat()`：在没有传递参数的情况下，只是复制当前数组并返回副本。
-
-`Array.isArray()`用来判断一个未知的对象是否为数组。
+用来判断一个未知的对象是否为数组。
 
 ```
 // 检测类数组对象
@@ -60,6 +75,7 @@ function isArrayLike(o) {
 
 
 
-**注意事项**
+### 注意事项
+
 1. 在数组上不应该使用for/in循环遍历，因为它能够枚举继承的属性，结合hasOwnProperty可以过滤；
 2. forEach循环不能使用return/break来退出循环
