--- a/JavaScript基础/数组.md
+++ b/JavaScript基础/数组.md
@@ -18,7 +18,7 @@
 
 ### 数组方法
 
-**1. 操作方法**
+#### 1. 操作方法
 
 `push()`：末尾添加；
 
@@ -35,7 +35,7 @@
 
 `concat()`：在没有传递参数的情况下，只是复制当前数组并返回副本。
 
-**2. 遍历方法**
+#### 2. 遍历方法
 
 `every()`：对数组中的每一项运行给定函数，如果该函数对每一项都返回true，则返回true。
 
@@ -43,9 +43,11 @@
 
 `map()`：对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
 
-`forEach()`：对数组中的每一项运行给定函数。**这个方法没有返回值。**
+`forEach()`：对数组中的每一项运行给定函数。**这个方法没有返回值**。
 
-**3. 过滤方法**
+`for...of`：可以代替forEach方法。
+
+#### 3. 过滤方法
 
 `filter()`：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
 
@@ -73,9 +75,27 @@ function isArrayLike(o) {
 }
 ```
 
+### for...of
+
+循环读取键值（**for...in循环读取属性值**），此循环调用遍历器接口，因此只返回具有数字索引的属性。
+
+
+```
+let arr = [3, 5, 7];
+arr.foo = 'hello';
+
+for (let i in arr) {
+  console.log(i); // "0", "1", "2", "foo"
+}
+
+for (let i of arr) {
+  console.log(i); //  "3", "5", "7"
+}
+```
 
 
 ### 注意事项
 
-1. 在数组上不应该使用for/in循环遍历，因为它能够枚举继承的属性，结合hasOwnProperty可以过滤；
-2. forEach循环不能使用return/break来退出循环
+1. 在数组上不应该使用for/in循环遍历，因为它能够枚举继承的属性，要结合hasOwnProperty可以过滤；
+
+2. forEach循环不能使用break、continue和return来退出循环,for...of则可以。
