--- a/JavaScript基础/数组.md
+++ b/JavaScript基础/数组.md
@@ -51,9 +51,12 @@
 
 `filter()`：对数组中的每一项运行给定函数，返回该函数会返回 true 的项组成的数组。
 
-`sort()`：比较函数
-- 如果数组包含undefined元素，它们将会被排到数组的尾部
-- 如果第一个参数应该在前，则应返回一个小于0的数值，否则返回大于0的数值。相等则返回0。
+#### 4. 排序方法
+`sort(参数1，参数2)`
+- 如果数组包含undefined元素，它们将会被排到数组的尾部；
+- 如果第一个参数应该在前，应返回一个小于0的数值，`a-b<0`；
+- 如果第二个参数应该在前，应返回一个大于0的数值，`a-b>0`；
+- 相等则返回0，`a-b=0`。
 
 
 ### Array.isArray()
