--- a/ES6/目录.md
+++ b/ES6/目录.md
@@ -4,6 +4,7 @@
 * [字符串的扩展](字符串的扩展.md)
 * [数值的扩展](数值的扩展.md)
 * [函数的扩展](函数的扩展.md)
+* [数组的扩展](数组的扩展.md)
 * [Set数据结构](Set数据结构.md)
 * [Map数据结构](Map数据结构.md)
 * [ES6编程风格](ES6编程风格.md)
