--- a/ES6/字符串的扩展.md
+++ b/ES6/字符串的扩展.md
@@ -2,11 +2,14 @@
 
 ### includes()、startWith()、endWith()
 
-传统上，JavaScript 只有indexOf方法，可以用来确定一个字符串是否包含在另一个字符串中。ES6 又提供了三种新方法。
+传统上，JavaScript只有indexOf方法，可以用来确定一个字符串是否包含在另一个字符串中。ES6 又提供了三种新方法。
 
-- includes()：返回布尔值，表示是否找到了参数字符串。
-- startsWith()：返回布尔值，表示参数字符串是否在原字符串的头部。
-- endsWith()：返回布尔值，表示参数字符串是否在原字符串的尾部。
+`includes()`：返回布尔值，表示是否找到了参数字符串。
+
+`startsWith()`：返回布尔值，表示参数字符串是否在原字符串的头部。
+
+`endsWith()`：返回布尔值，表示参数字符串是否在原字符串的尾部。
+
 
 ```
 let s = 'Hello world!';
@@ -53,8 +56,9 @@ s.includes('o') // true
 
 ### padStart()、padEnd()
 
-- padStart：头部补全
-- padEnd：尾部补全
+`padStart`：头部补全
+
+`padEnd`：尾部补全
 
 接受两个参数，第一个参数是字符串补全生效的最大长度，第二个参数是用来补全的字符串。
 
@@ -67,7 +71,8 @@ s.includes('o') // true
 ```
 
 ### trimStart()、trimEnd()
-trimStart()消除字符串头部的空格，trimEnd()消除尾部的空格。它们返回的都是新字符串，不会修改原始字符串。
+
+`trimStart()`消除字符串头部的空格，`trimEnd()`消除尾部的空格。它们返回的都是新字符串，不会修改原始字符串。
 
 ```
 const s = '  abc  ';
@@ -77,4 +82,6 @@ s.trimStart() // "abc  "
 s.trimEnd() // "  abc"
 ```
 
-浏览器还定义了这两个方法的别名：trimLeft()是trimStart()的别名，trimRight()是trimEnd()的别名。
+浏览器还定义了这两个方法的别名：
+
+`trimLeft()`<=>`trimStart()`，`trimRight()`<=>`trimEnd()`。
