--- a/ES6/数组的扩展.md
+++ b/ES6/数组的扩展.md
@@ -1,2 +1,119 @@
 # 数组的扩展
 
+### 扩展运算符
+
+将一个数组转换为逗号分隔的参数序列。
+
+#### 用途
+
+**1. 替代apply方法**
+```
+// ES5
+function fn(x, y, z) {
+  // ...
+}
+var args = [0, 1, 2];
+fn.apply(null, args); // 将数组转为函数的参数
+
+// ES6
+function fn(x, y, z) {
+  // ...
+}
+let args = [0, 1, 2];
+fn(...args);
+```
+
+**2. 复制数组**
+
+注意：数组元素为对象类型时，是浅拷贝。
+
+```
+// ES5
+const a1 = [1,2]
+const a2 = a1.concat()
+
+// ES6
+const a1 = [1,2]
+const a2 = [...a1]
+```
+
+**3. 合并数组**
+
+使用扩展运算符合并数组也是浅拷贝。
+
+```
+const arr1 = ['a', 'b'];
+const arr2 = ['c'];
+const arr3 = ['d', 'e'];
+
+[...arr1, ...arr2, ...arr3]
+// [ 'a', 'b', 'c', 'd', 'e' ]
+```
+
+### Array.from()
+
+Array.from()方法可以将**类数组对象**和**可遍历的对象**转为真正的数组。
+
+类数组对象：必须有length属性，唯一的本质特征。
+
+可遍历的对象：部署了Iterator接口的数据结构。
+
+### Array.of()
+
+将一组值，转换为数组。
+
+```
+Array.of() // []
+Array.of(undefined) // [undefined]
+Array.of(1) // [1]
+Array.of(1, 2) // [1, 2]
+```
+
+### find()、findIndex()
+
+`find()`方法用于找出第一个符合条件的数组成员，如果没有符合条件的成员，则返回undefined。
+
+`findIndex()`方法返回第一个符合条件的数组成员的位置，如果所有成员都不符合条件，则返回-1。
+
+### includes()
+
+某个数组是否包含给定的值，返回布尔值。
+
+```
+[1, 2, 3].includes(2)     // true
+[1, 2, 3].includes(4)     // false
+[1, 2, NaN].includes(NaN) // true
+```
+
+### flat()、flatMap()
+
+`flat()`用于将嵌套的数组“拉平”，变成一维的数组。
+
+```
+[1, 2, [3, 4]].flat()
+// [1, 2, 3, 4]
+```
+
+默认只会“拉平”一层，如果想要“拉平”多层的嵌套数组，可以将方法的参数写成一个整数，表示想要拉平的层数。
+
+```
+[1, 2, [3, [4, 5]]].flat(2)
+// [1, 2, 3, 4, 5]
+```
+
+如果不管有多少层嵌套，都要转成一维数组，可以用Infinity关键字作为参数。
+
+```
+[1, [2, [3]]].flat(Infinity)
+// [1, 2, 3]
+```
+
+`flatMap()`方法对原数组的每个成员执行一个函数（相当于执行map()），然后对返回值组成的数组执行flat()方法。该方法返回一个新数组，不改变原数组。
+
+```
+// 相当于 [[2, 4], [3, 6], [4, 8]].flat()
+[2, 3, 4].flatMap((x) => [x, x * 2])
+// [2, 4, 3, 6, 4, 8]
+```
+
+flatMap()只展开一层数组。
