--- a/JavaScript基础/函数.md
+++ b/JavaScript基础/函数.md
@@ -100,8 +100,12 @@ console.log(wordToUpperCase(['apple', 'pen', 'apple-pen']));
 ### apply和call
 apply()和call()方法的用途在于在特定的作用域中调用函数，实际上等于设置函数体内this对象的值。
 
-- apply()接收两个参数：一个是在其中运行函数的作用域，另一个是参数数组，也可以是arguments对象。
-- call()接收的第一个参数同apply，其余的参数都直接传递给函数。
+- apply(参数1，参数2)
+  参数1：运行函数的作用域，
+  参数2：数组或arguments对象。
+- call(参数1， 其他参数)
+  参数1：同apply，运行函数的作用域，
+  其余的参数都直接传递给函数。
 
 每个函数都有一个prototype属性，这个属性是一个指针，指向一个对象，这个对象的用途是包含可以由特定类型的所有实例共享的属性和方法。
 
