--- a/ES6/对象的扩展.md
+++ b/ES6/对象的扩展.md
@@ -26,3 +26,50 @@ ES6 一共有 5 种方法可以遍历对象的属性。
 
 ### 对象新增的方法
 
+#### Object.is()
+
+用来比较两个值是否严格相等。与“===”的行为基本一致。
+
+```
++0 === -0 //true
+NaN === NaN // false
+
+Object.is(+0, -0) // false
+Object.is(NaN, NaN) // true
+```
+
+#### Object.assign(target, sources)
+
+用于对象的合并，将源对象的所有可枚举属性，复制到目标对象。
+
+注意：
+1. 只拷贝源对象的自身属性（不拷贝继承属性），也不拷贝不可枚举的属性。
+2. 执行的是浅拷贝，而不是深拷贝。如果源对象某个属性的值是对象，那么目标对象拷贝得到的是这个对象的引用。
+3. 目标对象的同名属性会被替换。
+
+### Object.keys()、Object.values()、Object.entries()
+
+```
+let {keys, values, entries} = Object;
+let obj = { a: 1, b: 2, c: 3 };
+
+for (let key of keys(obj)) {
+  console.log(key); // 'a', 'b', 'c'
+}
+
+for (let value of values(obj)) {
+  console.log(value); // 1, 2, 3
+}
+
+for (let [key, value] of entries(obj)) {
+  console.log([key, value]); // ['a', 1], ['b', 2], ['c', 3]
+}
+```
+
+### Object.getOwnPropertyDescriptors()
+
+略。
+
+### __proto__属性，Object.setPrototypeOf()，Object.getPrototypeOf()
+
+略。
