--- a/ES6/目录.md
+++ b/ES6/目录.md
@@ -6,6 +6,7 @@
 * [函数的扩展](函数的扩展.md)
 * [数组的扩展](数组的扩展.md)
 * [对象的扩展](对象的扩展.md)
+* [Symbol](Symbol.md)
 * [Set数据结构](Set数据结构.md)
 * [Map数据结构](Map数据结构.md)
 * [ES6编程风格](ES6编程风格.md)
