--- a/ES6/目录.md
+++ b/ES6/目录.md
@@ -10,4 +10,5 @@
 * [Promise对象](Promise对象.md)
 * [Set数据结构](Set数据结构.md)
 * [Map数据结构](Map数据结构.md)
+* [Generator函数](Generator函数.md)
 * [ES6编程风格](ES6编程风格.md)
