--- a/ES6/目录.md
+++ b/ES6/目录.md
@@ -12,4 +12,5 @@
 * [Promise对象](Promise对象.md)
 * [Generator函数](Generator函数.md)
 * [async函数](async函数.md)
+* [Class](Class.md)
 * [ES6编程风格](ES6编程风格.md)
