--- a/JavaScript基础/正则表达式.md
+++ b/JavaScript基础/正则表达式.md
@@ -85,4 +85,5 @@ pattern.test(text)
 
 邮箱：/^([A-Za-z0-9_\-\.])+\@([A-Za-z0-9_\-\.])+\.([A-Za-z]{2,4})$/
 
+保留两位小数：/^(([1-9]{1}\d*)|(0{1}))(\.\d{2})$/
 ```
